[tool.poetry]
name = "actions_poetry_cache"
version = "0.1.0"
description = ""
authors = ["Robin Linacre <robin.linacre@digital.justice.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlglot = "^1.24.2"

[tool.poetry.dev-dependencies]
black = "pytest"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
